# PltEdit

./: .gitignore  README.md  demo.plt  example.ipynb  figure (1).plt  figure.plt  figure_base.plt  figure_edited.plt  generate_demo.py  pyproject.toml
pltedit/: __init__.py  _app.py  _cli.py  _io.py  _style.py
tests/: test_io.py
